samples/test5.out

*** Error line 3.
	void a;
        ^^^^
*** syntax error

